# rust_lua

./: .gitignore  CLAUDE.md  CMakeLists.txt  Cargo.toml  build.rs  run_tests.sh
.claude/: check_memory.sh  settings.json  verify.sh
.github/workflows/: ci.yml
.omp/agent/: settings.json
.omp/agents/: linux-asm-perf-optimize.md
examples/: check_sizes.rs
src/: lapi.c  lapi.h  lauxlib.h  lcode.h  lctype.h  ldebug.h  ldo.h  lfunc.c  lfunc.h  lgc.h  llex.h  llimits.h  lmem.h  lobject.h  lopcodes.h  lopnames.h  lparser.h  lprefix.h  lstate.h  lstring.h  ltable.h  ltm.h  lua.cpp  lua.h  luaconf.h  lualib.h  lundump.h  lvm.h  lzio.h
src_rs/: bindings.rs  capi.rs  capi_variadic.c  cli.rs  config.rs  debug.rs  execute.rs  func.rs  gc.rs  lib.rs  lua_ffi.rs  lua_state.rs  lvm.rs  main.rs  mem.rs  objects.rs  opcodes.rs  opnames.rs  parser.rs  state.rs  strings.rs  table.rs  tm.rs  vm.rs
src_rs/compiler/: bytecode_dump.rs  cmp_tests.rs  compile.rs  lexer.rs  mod.rs
src_rs/stdlib/: base_lib.rs  coroutine_lib.rs  debug_lib.rs  io_lib.rs  math_lib.rs  mod.rs  os_lib.rs  string_lib.rs  table_lib.rs  utf8_lib.rs
tests/libs/: makefile
tests_lua/: gc_bench.lua  gc_linkedlist_diag.lua  gc_linkedlist_test.lua  test_focus.lua  test_setfield_overflow.lua
tests_rs/: arithmetic_tests.rs  base_lib_tests.rs  integration_tests.rs  math_lib_tests.rs  metamethod_tests.rs  string_tests.rs  upvalue_tests.rs
tools/: check_memory.sh  gc_bench_run.sh  verify.sh
