[package]
name = "lua-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "lua_rs"
path = "src_rs/lib.rs"
crate-type = ["rlib", "staticlib"]

[[bin]]
name = "lua"
path = "src_rs/main.rs"

[[test]]
name = "integration_tests"
path = "tests_rs/integration_tests.rs"

[[test]]
name = "upvalue_tests"
path = "tests_rs/upvalue_tests.rs"

[[test]]
name = "metamethod_tests"
path = "tests_rs/metamethod_tests.rs"

[[test]]
name = "arithmetic_tests"
path = "tests_rs/arithmetic_tests.rs"

[[test]]
name = "string_tests"
path = "tests_rs/string_tests.rs"

[features]
ffi = []

[dependencies]
libc = "0.2"
arc-swap = "1"
hashbrown = "0.15"
bitflags = "2"
imara-diff = "0.2"

[build-dependencies]
cc = "1.0"