[package]
name = "lua-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "lua_rs"
path = "src_rs/lib.rs"
crate-type = ["rlib", "staticlib"]

[[bin]]
name = "lua"
path = "src_rs/main.rs"

[[test]]
name = "integration_tests"
path = "tests_rs/integration_tests.rs"

[[test]]
name = "upvalue_tests"
path = "tests_rs/upvalue_tests.rs"

[[test]]
name = "metamethod_tests"
path = "tests_rs/metamethod_tests.rs"

[[test]]
name = "arithmetic_tests"
path = "tests_rs/arithmetic_tests.rs"

[[test]]
name = "string_tests"
path = "tests_rs/string_tests.rs"

[[test]]
name = "base_lib_tests"
path = "tests_rs/base_lib_tests.rs"

[[test]]
name = "math_lib_tests"
path = "tests_rs/math_lib_tests.rs"

[features]
ffi = []
# 默认关闭: StringTable/StringCache 使用 std::cell::RefCell (零开销,单线程)
# 启用时改用 parking_lot::RwLock (多线程安全,有原子操作开销)
threaded = ["parking_lot"]

[dependencies]
libc = "0.2"
arc-swap = "1"
hashbrown = "0.15"
bitflags = "2"
imara-diff = "0.2"
parking_lot = { version = "0.12", optional = true }

[build-dependencies]
cc = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = false
strip = "symbols"
panic = "unwind"
overflow-checks = false
